2013-01-25 Graeme Gott <graeme@gottcode.org>
	* Update dictionary when language is changed.
	* Allow player to choose language of board.

2013-01-23 Graeme Gott <graeme@gottcode.org>
	* FIXED: Did not use translated name of patterns.

2013-01-22 Graeme Gott <graeme@gottcode.org>
	* Attempt to use wordlist that matches locale.
	* Use language of wordlist in dictionary.

2013-01-20 Graeme Gott <graeme@gottcode.org>
	* Replace English wordlist.

2013-01-19 Graeme Gott <graeme@gottcode.org>
	* Cache definitions for two weeks.

2013-01-15 Graeme Gott <graeme@gottcode.org>
	* Show entire definition of word.

2013-01-12 Graeme Gott <graeme@gottcode.org>
	* Look up extra spellings for each word.
	* Make wordlist no longer be a static object.
	* Add loading extra spellings of words.

2013-01-09 Graeme Gott <graeme@gottcode.org>
	* Add version number to saved game.
	* Use random class from Tanglet.
	* Refactor wordlist out of pattern.

2013-01-06 Graeme Gott <graeme@gottcode.org>
	* Use Wiktionary for definitions.

2012-12-24 Graeme Gott <graeme@gottcode.org>
	* Add support for compiling with Qt 5.0.0.

2012-05-28 Graeme Gott <graeme@gottcode.org>
	* Update deployment scripts.
	* Move word list to subfolder.
	* Add locale dialog.

2012-05-16 Graeme Gott <graeme@gottcode.org>
	* FIXED: Twisty boards sometimes have words that touch incorrectly.

2009-09-07 Graeme Gott <graeme@gottcode.org>
	* Tag version 1.0.1.

2009-09-03 Graeme Gott <graeme@gottcode.org>
	* FIXED: Identical seeds did not always generate identical games.
	* FIXED: Crashed when using multiple mouse buttons during a drag.

2009-08-30 Graeme Gott <graeme@gottcode.org>
	* Tag version 1.0.0.

2009-08-29 Graeme Gott <graeme@gottcode.org>
	* Refactor pattern class.
	* FIXED: Loading text would sometimes disappear.
	* FIXED: Success message did not disappear when starting a game.
	* FIXED: Words were sometimes repeated in puzzle.

2009-08-27 Graeme Gott <graeme@gottcode.org>
	* Use thread for creating patterns.
